--- a/uis_custom_blocks/js/src/blocks/accordian/style.scss
+++ b/uis_custom_blocks/js/src/blocks/accordian/style.scss
@@ -4,19 +4,9 @@
   margin: 1rem 0;
   background: #fff;
 
-  // Remove default details styling
+  // Remove default details/summary styling
   &::-webkit-details-marker {
     display: none;
-  }
-
-  &[open] {
-    .uis-accordion__title {
-      color: #007cba;
-    }
-    
-    .uis-accordion__toggle {
-      transform: rotate(45deg);
-    }
   }
 
   &__header {
@@ -32,11 +22,6 @@
 
     &:hover {
       background: #e9ecef;
-    }
-
-    &:focus {
-      outline: 2px solid #007cba;
-      outline-offset: -2px;
     }
   }
 
@@ -59,10 +44,78 @@
 
   &__content {
     padding: 1rem;
+    border-top: 1px solid #ddd;
   }
 
   &__paragraph {
     line-height: 1.6;
     color: #333;
+    margin-bottom: 1rem;
+    
+    // Style RichText output
+    strong, b {
+      font-weight: 600;
+    }
+    
+    em, i {
+      font-style: italic;
+    }
+    
+    u {
+      text-decoration: underline;
+    }
+    
+    s, del {
+      text-decoration: line-through;
+    }
+    
+    code {
+      background: #f1f3f4;
+      padding: 0.2rem 0.4rem;
+      border-radius: 3px;
+      font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+      font-size: 0.9em;
+    }
+    
+    a {
+      color: #007cba;
+      text-decoration: underline;
+      
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    
+    mark {
+      background: #fff3cd;
+      padding: 0.1rem 0.2rem;
+      border-radius: 2px;
+    }
+  }
+
+  // Image section styles
+  &__image-section {
+    margin-top: 1rem;
+    padding-top: 1rem;
+    border-top: 1px solid #eee;
+    text-align: center;
+  }
+
+  &__image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+
+  // Native HTML accordion behavior
+  &[open] {
+    .uis-accordion__title {
+      color: #007cba;
+    }
+    
+    .uis-accordion__toggle {
+      transform: rotate(45deg);
+    }
   }
 }
