--- a/uis_custom_blocks/js/src/blocks/accordian/style.scss
+++ b/uis_custom_blocks/js/src/blocks/accordian/style.scss
@@ -119,3 +119,48 @@
     }
   }
 }
+
+.uis-accordion {
+  &__content {
+    /* Center the content container */
+    max-width: var(--uis-accordion-content-width, 800px);
+    margin-left: auto;
+    margin-right: auto;
+
+    /* Ensure most child blocks center within the content width */
+    > * {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* Media centering */
+    img,
+    figure,
+    video,
+    iframe {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 100%;
+      height: auto;
+    }
+
+    /* Respect WordPress alignment classes if used */
+    .alignwide {
+      max-width: var(--wp--style--global--content-size, 1200px);
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .alignfull {
+      width: 100vw;
+      max-width: 100vw;
+      margin-left: calc(50% - 50vw);
+      margin-right: calc(50% - 50vw);
+    }
+
+    .alignleft { margin-left: 0; margin-right: auto; }
+    .alignright { margin-left: auto; margin-right: 0; }
+  }
+}
+
