--- a/uis_custom_blocks/js/src/blocks/advanced-accordian/style.scss
+++ b/uis_custom_blocks/js/src/blocks/advanced-accordian/style.scss
@@ -92,3 +92,43 @@
     .uis-accordion__toggle { transform: rotate(45deg); }
   }
 }
+
+.uis-accordion {
+  &__content {
+    max-width: var(--uis-accordion-content-width, 800px);
+    margin-left: auto;
+    margin-right: auto;
+
+    > * {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    img,
+    figure,
+    video,
+    iframe {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 100%;
+      height: auto;
+    }
+
+    .alignwide {
+      max-width: var(--wp--style--global--content-size, 1200px);
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .alignfull {
+      width: 100vw;
+      max-width: 100vw;
+      margin-left: calc(50% - 50vw);
+      margin-right: calc(50% - 50vw);
+    }
+
+    .alignleft { margin-left: 0; margin-right: auto; }
+    .alignright { margin-left: auto; margin-right: 0; }
+  }
+}
