--- a/uis_custom_blocks/js/src/blocks/advanced-accordian/style.scss
+++ b/uis_custom_blocks/js/src/blocks/advanced-accordian/style.scss
@@ -3,6 +3,9 @@
   border-radius: 4px;
   margin: 1rem 0;
   background: #fff;
+  max-width: var(--wp--style--global--content-size, 1200px);
+  margin-left: auto;
+  margin-right: auto;
 
   &::-webkit-details-marker { display: none; }
 
