--- a/uis_custom_blocks/js/src/blocks/advanced-accordian/editor.scss
+++ b/uis_custom_blocks/js/src/blocks/advanced-accordian/editor.scss
@@ -239,6 +239,23 @@
   transition: transform 0.2s ease !important;
 }
 
+// Force block inserter plus icon visibility regardless of focus state
+.block-editor-block-list__layout .uis-accordion .block-editor-button-block-appender,
+.block-editor-block-list__layout .uis-accordion .block-list-appender,
+.wp-block .uis-accordion .block-editor-button-block-appender,
+.wp-block .uis-accordion .block-list-appender {
+  display: block !important;
+  opacity: 1 !important;
+  visibility: visible !important;
+  position: relative !important;
+  z-index: 1 !important;
+  pointer-events: auto !important;
+  margin: 0.5rem 0 0 0 !important;
+  width: 100% !important;
+  left: 0 !important;
+  right: 0 !important;
+}
+
 // Define consistent positioning variables
 :root {
   --accordion-toggle-size: 1.5rem;
